dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-web
  namespace: myapp
spec:
  selector:
    matchLabels:
      app: myapp-web
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp-web
    spec:
      containers:
      - name: myapp-web
        image: rembun/devops:argocd-website
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: dockerhub-secret
