dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: myapp-v1
spec:
  type: LoadBalancer
  selector:
    app: myapp-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
