dev/dns-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
spec:
  rules:
  - host: web.kaa.co.za
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp-service
            port:
              number: 8080
